# airbnb-zurich-analysis

./: .gitignore  pyproject.toml
scr/: 01-download-data.py  XX-analyze.ipynb
