[tool.poetry]
name = "airbnb-zurich-analysis"
version = "0.1.0"
description = "Analyzes Airbnb data for Zurich for the CRISP-DM ta\u001b task of Udacity's data science nanodegree."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
