[tool.poetry]
name = "airbnb-zurich-analysis"
version = "0.1.0"
description = "Analyzes Airbnb data for Zurich for the CRISP-DM ta\u001b task of Udacity's data science nanodegree."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
ipykernel = "^6.13.0"
GitPython = "^3.1.27"
matplotlib = "^3.5.2"
fitter = "^1.4.0"
statsmodels = "^0.13.2"
seaborn = "^0.11.2"
folium = "^0.12.1"
branca = "^0.5.0"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
